ocp/ocp-cmdbuild-companion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cmdbuild
  name: cmdbuild-companion
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: cmdbuild-companion
  strategy: {}
  template:
    metadata:
      labels:
        deployment: cmdbuild-companion
    spec:
      containers:
      - env:
        - name: POSTGRES_HOST
          value: cmdbuild-db
        - name: JUPYTER_ENABLE_LAB
          value: "yes"
        image: 'jupyter/datascience-notebook'
        name: cmdbuild-companion
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: cmdbuild-companion-data
            mountPath: /home/jovyan/
      volumes:
        - name: cmdbuild-companion-data
          persistentVolumeClaim:
            claimName: cmdbuild-companion-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cmdbuild
  name: cmdbuild-companion
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    deployment: cmdbuild-companion
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cmdbuild
  name: cmdbuild-companion
spec:
  port:
    targetPort: 8888-tcp
  to:
    name: cmdbuild-companion
